Use Files newBufferedWriter and newBufferedReader